# livekit-assistant

./: .gitignore  Procfile  README.md  assistant.py  package.json  pyproject.toml  requirements.txt
