[tool.poetry]
name = "livekit-assistant"
version = "1.0.0"
description = "A LiveKit-based AI assistant"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "*"
pillow = "*"
pytesseract = "*"
deep-translator = "*"
livekit = "*"
# Add other dependencies here

[tool.poetry.dev-dependencies]
# Add development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
